chore: Support for Maven Compiler Plugin enablePreview parameter